@@ -35,9 +35,13 @@
 #
 # Architecture selection
 #
-# CONFIG_ARCH - identifies the arch subdirectory
+# CONFIG_ARCH - identifies the arch subdirectory and, hence, the
+#   processor architecture.
 # CONFIG_ARCH_8051 - Set if processor is 8051 family
 # CONFIG_ARCH_8052 = Set if processor is 8052 family
+# CONFIG_BOARD - identifies the configs subdirectory and, hence,
+#   the board that supports the particular chip or SoC.
+# CONFIG_BOARD_name - for use in C code
 # CONFIG_BOARD - identifies the configs subdirectory
 # CONFIG_BARD_name - for use in C code
 #
